--- a/index.html
+++ b/index.html
@@ -196,6 +196,40 @@
       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
+  <br><br><br><br>
+  <div class="seccion-grilla" id="servicios">
+    <div class="seccion-grilla__titulo">
+      <h3>SERVICIOS</h3>
+      <h6 class="cursiva">Lo que te puedo ofrecer</h6>
+    </div>
+    <div class="seccion-grilla__informacion cursiva">
+      <p>Programacion de sitios web hechos a tu medida, desarrollados con tecnologias tales como HTML, CSS y JavaScript.<br>
+      El mejor posicionamiento en la web, para que no te preocupes en que te encuentren.</p>
+    </div>
+  </div>
+  <br><br><br><br>
+  <div class="seccion-servicios">
+    <div class="sector-izquierdo">
+      <div class="servicio-izq">
+        <div class="servicio__texto-izq">
+          <div class="servicio__texto__titulo">
+            <h6>Diseño Web</h6>
+          </div>
+          <div class="servicio__texto__info">
+            <p>Trabajo en conjunto con distintos programadores para ofrecerte un producto final complejo.</p>
+          </div>
+        </div>
+        <div class="servicio-imagen">
+          <svg aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path clip-rule="evenodd" d="M20.599 1.5c-.376 0-.743.111-1.055.32l-5.08 3.385a18.747 18.747 0 00-3.471 2.987 10.04 10.04 0 014.815 4.815 18.748 18.748 0 002.987-3.472l3.386-5.079A1.902 1.902 0 0020.599 1.5zm-8.3 14.025a18.76 18.76 0 001.896-1.207 8.026 8.026 0 00-4.513-4.513A18.75 18.75 0 008.475 11.7l-.278.5a5.26 5.26 0 013.601 3.602l.502-.278zM6.75 13.5A3.75 3.75 0 003 17.25a1.5 1.5 0 01-1.601 1.497.75.75 0 00-.7 1.123 5.25 5.25 0 009.8-2.62 3.75 3.75 0 00-3.75-3.75z" fill-rule="evenodd"></path>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div class="sector-derecho">
+      
+    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
