--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <h6>Diseño Web</h6>
           </div>
           <div class="servicio__texto__info">
-            <p>Trabajo en conjunto con distintos programadores para ofrecerte un producto final complejo.</p>
+            <p>Trabajo en conjunto con distintos programadores para ofrecerte un producto final complejo</p>
           </div>
         </div>
         <div class="servicio-imagen">
@@ -225,11 +225,134 @@
           </svg>
         </div>
       </div>
+        <div class="servicio-izq">
+          <div class="servicio__texto-izq">
+            <div class="servicio__texto__titulo">
+              <h6>Soporte Tecnico</h6>
+            </div>
+            <div class="servicio__texto__info">
+              <p>Soporte y Mantenimiento</p>
+            </div>
+          </div>
+          <div class="servicio-imagen">
+            <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z"></path>
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+            </svg>
+          </div>
+      </div>
     </div>
     <div class="sector-derecho">
-      
+      <div class="servicio-der">
+        <div class="servicio-imagen">
+          <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418"></path>
+          </svg>
+        </div>
+        <div class="servicio__texto-der">
+          <div class="servicio__texto__titulo">
+            <h6>Desarrollo Web</h6>
+          </div>
+          <div class="servicio__texto__info">
+            <p>Creacion de Landing Sites para personas y empresas, para introducirse en el mundo digital</p>
+          </div>
+        </div>
+      </div>
+      <div class="sector-derecho">
+        <div class="servicio-der">
+          <div class="servicio-imagen">
+            <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+          </div>
+          <div class="servicio__texto-der">
+            <div class="servicio__texto__titulo">
+              <h6>Marketing y posicionamiento</h6>
+            </div>
+            <div class="servicio__texto__info">
+              <p>Creacion de estrategias aplicables en distintas redes sociales y paginas para el crecimiento personal o empresarial</p>
+            </div>
+          </div>
+      </div>
+    </div>
     </div>
   </div>
+  <br><br><br><br>
+  <div class="proceso-creacion">
+    <div class="proceso-creacion__opacador">
+      <div class="proceso-creacion__texto">
+        <h5>PROCESO CREATIVO</h5>
+      </div>
+      <div class="linea-proceso">
+        <div class="etapa">
+            <img src="Recursos/franco-idea.webp" alt="">
+          <p>1</p>
+          <h5>IDEA</h5>
+        </div>
+        <div class="etapa">
+          <img src="Recursos/franco-explosion.webp" alt="">
+          <p>2</p>
+          <h5>BOCETO</h5>
+        </div>
+        <div class="etapa">
+          <img src="Recursos/franco-perfeccion.webp" alt="">
+          <p>3</p>
+          <h5>DISEÑO</h5>
+        </div>
+        <div class="etapa">
+          <img src="Recursos/franco-notebook.webp" alt="">
+          <p>4</p>
+          <h5>DESARROLLO</h5>
+        </div>
+        <div class="etapa">
+          <img src="Recursos/franco-miedo.webp" alt="">
+          <p>5</p>
+          <h5>PRUEBAS</h5>
+        </div>
+        <div class="etapa">
+          <img src="Recursos/franco-okey.webp" alt="">
+          <p>6</p>
+          <h5>PUBLICACION</h5>
+        </div>
+      </div>
+  </div>
+  </div>
+  <br><br><br><br>
+  <div class="seccion-contacto">
+    <img src="Recursos/franco-feliz.webp" alt="">
+    <h1>CONTACTAME</h1>
+    <form action="https://formsubmit.co/francotimpanaroprogramador@gmail.com" method="POST">
+      <div class="form-floating mb-3">
+        <input type="text" name="name" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+        <label for="floatingInput">Nombre</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="Tu Mail" required>
+        <label for="floatingInput">Email</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" name="message" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+        <label for="floatingInput">Motivo Contacto</label>
+      </div>
+      <input type="hidden" name="_subject" value="Nuevo Contacto de pagina!">
+      <input type="hidden" name="_captcha" value="false">
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+  <br><br><br><br>
+  <footer>
+    <p>Franco Santiago Timpanaro © 2023. Todos los derechos reservados.</p>
+    <a href="https://www.linkedin.com/in/franco-timpanaro-688a81158/" target="_blank">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9e9e9e" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <rect x="4" y="4" width="16" height="16" rx="2" />
+        <line x1="8" y1="11" x2="8" y2="16" />
+        <line x1="8" y1="8" x2="8" y2="8.01" />
+        <line x1="12" y1="16" x2="12" y2="11" />
+        <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+      </svg>
+    </a>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
