--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#perfil">Perfil</a>
             <a class="nav-link" href="#habilidades">Habilidades</a>
             <a class="nav-link" href="#servicios">Servicios</a>
-            <a class="nav-link" href="#proyectos">Proyectos</a>
+            <!-- <a class="nav-link" href="#proyectos">Proyectos</a> -->
             <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
@@ -69,7 +69,7 @@
       <div class="bloque">
         <h6>Info Personal:</h6>
         <p>Nombre : Franco Timpanaro</p>
-        <p>Email : <a href="mailto:francotimpanaroprogramador@gmail.com">francotimpanaroprogramador@gmail.com</a></p>
+        <p>Email : <a href="#contacto">francotimpanaroprogramador@gmail.com</a></p>
         <p>Localidad : La Plata, Argentina</p>
       </div>
     </div>
@@ -318,10 +318,10 @@
   </div>
   </div>
   <br><br><br><br>
-  <div class="seccion-contacto">
+  <div class="seccion-contacto" id="contacto">
     <img src="Recursos/franco-feliz.webp" alt="">
     <h1>CONTACTAME</h1>
-    <form action="954514f39e07acabf4b461c31aba1e1b" method="POST">
+    <form action="https://formsubmit.co/954514f39e07acabf4b461c31aba1e1b" method="POST">
       <div class="form-floating mb-3">
         <input type="text" name="name" class="form-control" id="floatingInput" placeholder="name@example.com" required>
         <label for="floatingInput">Nombre</label>
