--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#perfil">Perfil</a>
             <a class="nav-link" href="#habilidades">Habilidades</a>
             <a class="nav-link" href="#servicios">Servicios</a>
-            <!-- <a class="nav-link" href="#proyectos">Proyectos</a> -->
+            <a class="nav-link" href="#proyectos">Proyectos</a>
             <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
@@ -317,7 +317,66 @@
       </div>
   </div>
   </div>
+
   <br><br><br><br>
+
+  <div class="proyectos" id="proyectos">
+    <h1>PROYECTOS</h1>
+    <div>
+      <a class="proyecto" href="https://weoportunidades.netlify.app" target="_blank">
+        <div><img src="Recursos/tipografico.jpg" alt=""></div>
+        <div class="texto-proyecto">
+          <div class="texto-proyecto_titulo">
+            <h3>We Oportunidades</h3>
+          </div>
+          <div class="texto-proyecto_tecnologias">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>Bootstrap</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div>
+      <a class="proyecto" href="https://spontaneous-faloodeh-c7f13a.netlify.app" target="_blank">
+        <div><img src="Recursos/cafe.webp" alt=""></div>
+        <div class="texto-proyecto">
+          <div class="texto-proyecto_titulo">
+            <h3>Blog De Cafe</h3>
+          </div>
+          <div class="texto-proyecto_tecnologias">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>Bootstrap</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div>
+      <a  class="proyecto" href="https://pagina-de-ropa-ejemplo.netlify.app" target="_blank">
+        <div><img src="Recursos/portada-ropa.jpg" alt=""></div>
+        <div class="texto-proyecto">
+          <div class="texto-proyecto_titulo">
+            <h3>Pagina De Ropa</h3>
+          </div>
+          <div class="texto-proyecto_tecnologias">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>Bootstrap</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+  </div>
+
+  <br><br><br><br>
+
   <div class="seccion-contacto" id="contacto">
     <img src="Recursos/franco-feliz.webp" alt="">
     <h1>CONTACTAME</h1>
@@ -341,7 +400,10 @@
       <button type="submit">Enviar</button>
     </form>
   </div>
+  
+  
   <br><br><br><br>
+
   <footer>
     <p>Franco Santiago Timpanaro © 2023. Todos los derechos reservados.</p>
     <div class="footer-redes">
