--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
     </div>
 
     <div>
-      <a  class="proyecto" href="https://pagina-de-ropa-ejemplo.netlify.app" target="_blank">
-        <div><img src="Recursos/portada-ropa.jpg" alt=""></div>
+      <a  class="proyecto" href="https://car-rental-franco-timpanaro.netlify.app" target="_blank">
+        <div><img src="Recursos/Copia de VW-hero.png" alt=""></div>
         <div class="texto-proyecto">
           <div class="texto-proyecto_titulo">
-            <h3>Pagina De Ropa</h3>
+            <h3>Car Rental</h3>
           </div>
           <div class="texto-proyecto_tecnologias">
             <p>HTML</p>
