--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,400;1,800&family=Shantell+Sans:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="preload" href="Recursos/">
+    <link rel="preload" href="Recursos/musica.jpg">
     <link rel="stylesheet" href="normalize.css">
     <title>Franco Timpanaro</title>
 </head>
