--- a/index.html
+++ b/index.html
@@ -325,17 +325,17 @@
   <div class="proyectos" id="proyectos">
     <h1>PROYECTOS</h1>
     <div>
-      <a class="proyecto" href="https://weoportunidades.netlify.app" target="_blank">
-        <div><img src="Recursos/tipografico.jpg" alt=""></div>
+      <a class="proyecto" href="https://pokedek-francotimpanaro.netlify.app" target="_blank">
+        <div><img src="Recursos/pokedex-logo.png" alt=""></div>
         <div class="texto-proyecto">
           <div class="texto-proyecto_titulo">
-            <h3>We Oportunidades</h3>
+            <h3>Pokedex</h3>
           </div>
           <div class="texto-proyecto_tecnologias">
             <p>HTML</p>
             <p>CSS</p>
             <p>JavaScript</p>
-            <p>Bootstrap</p>
+            <p>Apis</p>
           </div>
         </div>
       </a>
