--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </div>
       <div class="seccion-grilla__informacion cursiva">
         <p>Soy un estudiante de Licenciatura en Sistemas en desarrollo que actualmente trabaja como Front End Developer y Diseñador de paginas Web.<br>
-        En desarrollo Web trabajo con tecnologias como (Html, Css, Sass y JavaScript).<br>
-        En el ambito del diseño grafico trabajo con tecnologias como (Photshop, Illustrator, Premiere y After Effects).<br>
+        En desarrollo Web trabajo con tecnologias como Html, Css, Sass y JavaScript.<br>
+        En el ambito del diseño grafico trabajo con tecnologias como Photshop, Illustrator, Premiere y After Effects.<br>
         Asi mismo realizo </p>
       </div>
     </div>
@@ -153,15 +153,15 @@
     </div>
     <h6>CSS</h6>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
     <h6>JAVASCRIPT</h6>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
     <h6>BOOTSTRAP</h6>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 92%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
   <div class="seccion-habilidades letra">
