--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="bloque-grilla3">
       <div class="bloque">
         <h6>Sobre Mi:</h6>
-          <p>Desde 2019 trabajo como proveedor de servicios en el ambito del desarrollo de paginas web.</p>
-          <p>He realizado Landing Sites y paginas para empresas emergentes.</p>
+          <p>Desde 2019 trabajo como desarrollador Front-End.</p>
+          <p>Lo principales proyectos en los que he participado son Landing Sites y paginas para empresas emergentes.</p>
       </div>
       <div class="bloque">
         <img src="Recursos/franco-feliz.webp" alt="">
@@ -145,58 +145,106 @@
   <br>
   <br>
   <div class="seccion-habilidades letra" id="habilidades">
-    <h2>HABILIDADES</h2>
+  <h2>HABILIDADES</h2>
     <h3>Desarrollo Web</h3>
-    <h6>HTML</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <h6>CSS</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <h6>JAVASCRIPT</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <h6>BOOTSTRAP</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 92%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="grupo-habilidades">
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-html5" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+          <path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+        </svg>
+        <h6>HTML</h6>
+      </div>
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-css3" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+          <path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+        </svg>
+        <h6>CSS</h6>
+      </div>
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+          <path d="M7.5 8h3v8l-2 -1" />
+          <path d="M16.5 8h-2.5a.5 .5 0 0 0 -.5 .5v3a.5 .5 0 0 0 .5 .5h1.423a.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+        </svg>
+        <h6>JAVASCRIPT</h6>
+      </div>
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-bootstrap" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M2 12a2 2 0 0 0 2 -2v-4a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v4a2 2 0 0 0 2 2" />
+          <path d="M2 12a2 2 0 0 1 2 2v4a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-4a2 2 0 0 1 2 -2" />
+          <path d="M9 16v-8h3.5a2 2 0 1 1 0 4h-3.5h4a2 2 0 1 1 0 4h-4z" />
+        </svg>
+        <h6>BOOTSTRAP</h6>
+      </div>
     </div>
   </div>
   <div class="seccion-habilidades letra">
     <h3>Diseño Grafico</h3>
-    <h6>PHOTOSHOP</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="grupo-habilidades">
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M4 20h4l10.5 -10.5a1.5 1.5 0 0 0 -4 -4l-10.5 10.5v4" />
+          <path d="M13.5 6.5l4 4" />
+        </svg>
+        <h6>PHOTOSHOP</h6>
+      </div>
+      <div class="habilidad">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-filters" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M12 8m-5 0a5 5 0 1 0 10 0a5 5 0 1 0 -10 0" />
+          <path d="M8 11a5 5 0 1 0 3.998 1.997" />
+          <path d="M12.002 19.003a5 5 0 1 0 3.998 -8.003" />
+        </svg>
+        <h6>AFTER EFFECTS</h6>
+      </div>
+    <div class="habilidad">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-badge-8k" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M3 5m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
+        <path d="M14 9v6" />
+        <path d="M17 9l-2 3l2 3" />
+        <path d="M15 12h-1" />
+        <path d="M8.5 12h-.5a1 1 0 0 1 -1 -1v-1a1 1 0 0 1 1 -1h1a1 1 0 0 1 1 1v1a1 1 0 0 1 -1 1h-1a1 1 0 0 0 -1 1v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1 -1v-1a1 1 0 0 0 -1 -1" />
+      </svg>
+      <h6>PREMIERE</h6>
     </div>
-    <h6>AFTER EFFECTS</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="habilidad">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-vector" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M3 3m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" />
+        <path d="M17 3m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" />
+        <path d="M17 17m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" />
+        <path d="M3 17m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" />
+        <path d="M5 7l0 10" />
+        <path d="M19 7l0 10" />
+        <path d="M7 5l10 0" />
+        <path d="M7 19l10 0" />
+      </svg>
+      <h6>ILLUSTRATOR</h6>
     </div>
-    <h6>PREMIERE</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <h6>ILLUSTRATOR</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
   <div class="seccion-habilidades letra">
     <h3>Idiomas</h3>
-    <h5>Ingles</h5>
-    <h6>Escritura</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="grupo-habilidades">
+    <div class="habilidad">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+        <path d="M3.6 9h16.8" />
+        <path d="M3.6 15h16.8" />
+        <path d="M11.5 3a17 17 0 0 0 0 18" />
+        <path d="M12.5 3a17 17 0 0 1 0 18" />
+      </svg>
+      <h6>INGLES</h6>
     </div>
-    <h6>Lectura</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <h6>Habla</h6>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
   <br><br><br><br>
